--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8081
 spring.application.name=carrito_de_compras
 spring.datasource.url=jdbc:mysql://localhost:3306/carrito_compra
 spring.datasource.username=root
